# hack-the-vault

./: .gitignore  README.md  auto_requirements.txt  dev_requirements.txt  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: deploy_docs.yml
docs/: class_diagram.drawio  conf.py  dataclass_comparison.ods  index.rst
docs/api/: resources.rst  utils.rst
docs/architecture/: class_diagram.drawio  dataclass_comparison.ods
docs/introduction/: index.rst
docs/source/: conf.py  index.rst
htk/: __main__.py  constants.py  resources.py  utils.py
htv/: __main__.py  constants.py  resources.py  utils.py
src/_layouts/: banner.txt  category.md  custom.md  exercise.md  front_matter.yml  gitignore.txt  mod_section.md  module.md  path.md  task.md  vault.md
src/datasources/: autogen.yml  sources.yml
src/htv/: __init__.py  __main__.py  constants.py  resources.py  utils.py
templates/: banner.txt  basic_writeup.md  mod_section.md  module_index.md  path_index.md  prolab_index.md  toolkit.js  track_index.md  writeup.md
tests/: testConf.py  testMain.py  testUtils.py  test_1_utils.py  test_2_resources.py  test_3_cli.py  test_3_htb.py  test_4_other.py  test_4_random.py
tests/fixtures/: 01_mod_info.json  02_mod_info.json  03_mod_info.json  04_skill_path_info.json  05_starting_point_info.json  06_machine_info.json  07_challenge_info.json  08_sherlock_info.json  09_track_info.json  10_pro_lab_info.json  11_fortress_info.json  challenge.json  fortress.json  machine.json  mod_1.json  mod_2.json  mod_3.json  pro_lab.json  sherlock.json  skill_path.json  (+3 more)
(+9 files in other folders)
